trying for more user_comments, savepoint, nonworking

--- a/client/suser.jade
+++ b/client/suser.jade
@@ -153,7 +153,7 @@ template(name='stackuser_page')
                         each user_answers
                             +answer_item
                     div
-                    .ui.header.get_comments
+                    .ui.header.pointer.get_comments
                         i.chat.outline.icon
                         |#{user_comments.count} comments
                     .ui.list.smallscroll
