--- a/client/nav.jade
+++ b/client/nav.jade
@@ -10,7 +10,7 @@ template(name='nav')
                 i.large.user.outline.grey.icon
             a.icon.zoomer.item.clear_tags.goto_reddit(href='/reddit' class="{{isActiveRoute regex='reddit'}}")
                 i.large.reddit.grey.icon
-            a.icon.zoomer.item.clear_tags.goto_dao(href='/dao' class="{{isActivePath '/dao'}}" title='search')
+            a.icon.zoomer.item.clear_tags.goto_dao(href='/' class="{{isActivePath '/'}}" title='search')
                 i.large.yin.yang.grey.icon
             a.icon.zoomer.item.clear_tags.goto_stack(href='/stack' class="{{isActivePath '/stack'}}")
                 i.large.stack.exchange.grey.icon
