--- a/client/suser.jade
+++ b/client/suser.jade
@@ -153,7 +153,7 @@ template(name='stackuser_page')
                         each user_answers
                             +answer_item
                     div
-                    .ui.header.pointer.get_comments
+                    .ui.dividing.header.pointer.get_comments
                         i.chat.outline.icon
                         |#{user_comments.count} comments
                     .ui.list.medscroll
@@ -221,7 +221,7 @@ template(name='answer_item')
     
 template(name='user_comment_item')
     .say_this !{body}
-    |#{site}
+    // |#{site}
     if in_dev
         +print_this
         +remove_button
