--- a/client/suser.jade
+++ b/client/suser.jade
@@ -12,7 +12,7 @@ template(name='stackuser_page')
     with stackuser_doc
         .ui.stackable.padded.grid
             .row
-                .four.wide.column
+                .three.wide.column
                     a.ui.basic.icon.circular.large.button.say_questions(href="/site/#{site}")
                         i.question.large.icon
                         // |questions
@@ -36,6 +36,22 @@ template(name='stackuser_page')
                     a.ui.large.compact.circular.basic.button(href=link target='_window' title="#{site} profile")
                         i.stack.exchange.icon
                         i.external.icon
+                    .ui.vertical.fluid.stackable.menu
+                        a.item(href="/site/#{site}/user/#{user_id}/questions")
+                            i.question.grey.icon
+                            |questions
+                        a.item(href="/site/#{site}/user/#{user_id}/answers")
+                            i.reply.grey.icon
+                            |answers
+                        a.item(href="/site/#{site}/user/#{user_id}/comments")
+                            i.chat.outline.grey.icon
+                            |comments
+                        a.item(href="/site/#{site}/user/#{user_id}/tags")
+                            i.tag.grey.icon
+                            |tags
+                        a.item(href="/site/#{site}/user/#{user_id}/badges")
+                            i.certificate.grey.icon
+                            |badges
                     +print_this
                     .ui.horizontal.list
                         .item.say_this account id #{account_id}
@@ -102,7 +118,7 @@ template(name='stackuser_page')
                     .ui.inline.header 
                         |#{max_emotion_name} #{max_emotion_percent}
                     div
-                .eleven.wide.column
+                .six.wide.column
                     .f12.say_this.pointer
                         |!{about_me}
                     if website_url
@@ -146,12 +162,14 @@ template(name='stackuser_page')
                     .scrolling
                         each user_questions
                             +user_question_item
+                .six.wide.column
                     .ui.header.get_answers
                         i.exclamation.icon
                         |#{user_answers.count} answers
                     .ui.list.medscroll
                         each user_answers
                             +answer_item
+                            .ui.divider
                     div
                     .ui.dividing.header.pointer.get_comments
                         i.chat.outline.icon
@@ -159,6 +177,7 @@ template(name='stackuser_page')
                     .ui.list.medscroll
                         each user_comments
                             +user_comment_item
+                            .ui.divider
                 .three.wide.column
                     .ui.grey.small.header 
                         i.fork.icon
@@ -226,6 +245,10 @@ template(name='user_comment_item')
         +print_this
         +remove_button
         // .ui.divider
+        .ui.button.call
+            i.dna.icon
+    each tags
+        .ui.label #{this}
     
     
     
