fix constant question downloading

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -11,7 +11,7 @@ template(name='nav')
             a.icon.zoomer.item.clear_tags.goto_reddit(href='/reddit' class="{{isActiveRoute regex='reddit'}}")
                 i.large.reddit.grey.icon
             a.icon.zoomer.item.clear_tags.goto_dao(href='/' class="{{isActivePath '/'}}" title='search')
-                i.large.yin.yang.grey.icon
+                i.big.yin.yang.grey.icon
             a.icon.zoomer.item.clear_tags.goto_stack(href='/stack' class="{{isActivePath '/stack'}}")
                 i.large.stack.exchange.grey.icon
             a.icon.zoomer.item.silence(href='#')
